--- a/HomePage.html
+++ b/HomePage.html
@@ -4,15 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Stilizimi.css">
 </head>
 <body>
     <header class="headerC">
 
     </header>
     <main>
+        <div class="buttonfield">
+            <button class="butoni"><h3>Kosove</h3></button>
+            <button class="butoni"><h3>Shqiperi</h3></button>
+            <button class="butoni"><h3>Rajon</h3></button>
+            <button class="butoni"><h3>Bote</h3></button>
+        </div>
         <div class="photoLajme">
             <div class="rubrika">
-                
+                <img class="foto" src="download.jpeg" alt="Foto">
+                <div class="Pershkrimi">
+                    <p>Lajmi 1</p>
+                </div>
+            </div>
+            <div class="rubrika">
+                <img class="foto" src="arrestim-1.jpg" alt="Foto">
+                <div class="Pershkrimi">
+                    <p>Lajmi 2sdfsdpijfjoisdfnos dslfsdf sdfmklsdnflsd lsldnlfkldns lsdfnsdklfnsdlk nfsldknflkdsn lsdkn dlfs</p>
+                </div>
+            </div>
+            <div class="rubrika">
+                <img class="foto" src="aktakuz-euml-p-euml-r-nj-euml-zyrtar-t-euml-komun-euml-s-s-euml-suharek-euml-s_hd-780x439-1.jpg" alt="Foto">
+                <div class="Pershkrimi">
+                    <p>Lajmi 3</p>
+                </div>
+            </div>
+            <div class="rubrika">
+                <img class="foto" src="MixCollage-07-Nov-2023-11-47-AM-7392.jpg" alt="Foto">
+                <div class="Pershkrimi">
+                    <p>Lajmi 4</p>
+                </div>
+            </div>
+            <div class="rubrika">
+                <img src="tun.jpg" alt="Foto">
+                <div class="Pershkrimi">
+                    <p>Lajmi 5</p>
+                </div>
             </div>
         </div>
     </main>
