--- a/HomePage.html
+++ b/HomePage.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <header class="headerC">
-
+        <div class="buttonfield">
+            <button class="butoni"><h3>Shendetesi</h3></button>
+            <button class="butoni"><h3>Ekonomi</h3></button>
+            <button class="butoni"><h3>Kulture</h3></button>
+            <button class="butoni"><h3>Sport</h3></button>
+        </div>
     </header>
     <main>
-        <div class="buttonfield">
-            <button class="butoni"><h3>Kosove</h3></button>
-            <button class="butoni"><h3>Shqiperi</h3></button>
-            <button class="butoni"><h3>Rajon</h3></button>
-            <button class="butoni"><h3>Bote</h3></button>
-        </div>
         <div class="photoLajme">
             <div class="rubrika">
                 <img class="foto" src="download.jpeg" alt="Foto">
