vazhdim-search bar

--- a/HomePage.html
+++ b/HomePage.html
@@ -14,6 +14,8 @@
             <button class="butoni"><h3>Kulture</h3></button>
             <button class="butoni"><h3>Sport</h3></button>
         </div>
+<img class="image" src="ne1813l003-news-logo-logotype-free-logo-icons.png" alt="logo">
+        <input class="search-bar" type="text" placeholder="Search....">
     </header>
     <main>
         <div class="photoLajme">
