--- a/HomePage.html
+++ b/HomePage.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <header class="headerC">
-        <div class="buttonfield">
-            <button class="butoni"><h3>Shendetesi</h3></button>
-            <button class="butoni"><h3>Ekonomi</h3></button>
-            <button class="butoni"><h3>Kulture</h3></button>
-            <button class="butoni"><h3>Sport</h3></button>
+        <div class="field">
+            <ul>
+                <li class="titulli"><h3>Shendetesi</h3></li>
+                <li class="titulli"><h3>Ekonomi</h3></li>
+                <li class="titulli"><h3>Kulture</h3></li>
+                <li class="titulli"><h3>Sport</h3></li>
+            </ul>
         </div>
 <img class="image" src="ne1813l003-news-logo-logotype-free-logo-icons.png" alt="logo">
         <input class="search-bar" type="text" placeholder="Search....">
@@ -52,7 +54,24 @@
         </div>
     </main>
     <footer class="footerC">
-
+        <div class="logot">
+            <ul>
+                <li class="logo"><img src="Facebook_Logo_2023.png" alt="facebook"></li>
+                <li class="logo"><img src="twitter-3-logo-png-transparent.png" alt="twitter"></li>
+                <li class="logo"><img src="instagram-6338392_1280.webp" alt="IG"></li>
+                <li class="logo"><img src="" alt=""></li>
+                <li class="logo"><img src="" alt=""></li>
+            </ul>
+        </div>
+        <div class="referencat">
+            <ul>
+                <li class="referenca">Home</li>
+                <li class="referenca">Tutorials</li>
+                <li class="referenca">Services</li>
+                <li class="referenca">About Us</li>
+                <li class="referenca">Contact Us</li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
