--- a/HomePage.html
+++ b/HomePage.html
@@ -15,9 +15,17 @@
                 <li class="titulli"><h3>Ekonomi</h3></li>
                 <li class="titulli"><h3>Kulture</h3></li>
                 <li class="titulli"><h3>Sport</h3></li>
-            
         </div>
-        <input class="search-bar" type="text" placeholder="Search....">
+        <div class="search-bar">
+
+        <div class="search"></div>
+        <div class="icon"></div>
+        <div class="input">
+            <input type="text" placeholder="Search... " id="mysearch">
+        </div>
+        <span class="clear" onclick="document.getElementById('mysearch')"></span>
+
+        </div>
     </header>
     <main>
         <div class="photoLajme">
@@ -75,5 +83,12 @@
         </div>
         
     </footer>
+    <script>
+        const icon = document.querySelector('.icon');
+        const search = document.querySelector('.search');
+        icon.onclick = function(){
+            search.classList.toggle('active')
+        }
+    </script>
 </body>
 </html>
