--- a/HomePage.html
+++ b/HomePage.html
@@ -40,52 +40,21 @@
     </header>
 
     <main>
-        <div class="box">
-            <img src="" />
-            <h4> titulli i lajmeve krydskfhdshdksfhkdlsdfds</h4>
+        <div class="box" onclick="openLink('Lajmi1.html')">
+            <img src="foto1.png" />
+            <h4>Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim</h4>
             <div class="date">
                 <p>09-12-2023</p>
             </div>
             <div class="desc">
-                description djlfdjf djhfalsd haskd ljaslkjd aasd alsjd asldjlaskhd alsdh ljasjhd alskhddasljd asldd
-                alksdkl ahslkdlk aslkdla ksdlkasd lkadsk alskdlk haslkdhalask alsd a
+                Vrasja mizore e Liridona Admeajt, krim ky që tronditi vendin para disa javësh po vazhdon të hetohet,
+                ndërkohë që pistat po zgjerohen dhe akoma nuk është konfirmuar motivi i rastit tragjik.
+                Tre persona ndodhen në paraburgim, teksa i dyshuari i fundit u arrestua sot nga Policia.
+                Naim Murseli – burri i të ndjerës ndodhet në Burgun e Sigurisë së Lartë, ku para disa ditësh e ka
+                vizitua babai i tij, raporton Gazeta Sinjali.
             </div>
         </div>
-        <div class="box">
-            <img src="" />
-            <h4> titulli i lajmeve krydskfhdshdksfhkdlsdfds</h4>
-            <div class="date">
-                <p>09-12-2023</p>
-            </div>
-            <div class="desc">
-                description djlfdjf djhfalsd haskd ljaslkjd aasd alsjd asldjlaskhd alsdh ljasjhd alskhddasljd asldd
-                alksdkl ahslkdlk aslkdla ksdlkasd lkadsk alskdlk haslkdhalask alsd aaidfhaf asidd oiasdasld asdjl asjd
-                sdj alsd lasjdlj sajdl jasljd lasdj asjkhdkas asd askdjasdhajks hdaksjhd kajshdkj hkasjdh kashdkajsh
-                dkajshd kajshd kjashd kahs kajshd ka dh
-            </div>
-        </div>
-        <div class="box">
-            <img src="" />
-            <h4> titulli i lajmeve krydskfhdshdksfhkdlsdfds</h4>
-            <div class="date">
-                <p>09-12-2023</p>
-            </div>
-            <div class="desc">
-                description djlfdjf djhfalsd haskd ljaslkjd aasd alsjd asldjlaskhd alsdh ljasjhd alskhddasljd asldd
-                alksdkl ahslkdlk aslkdla ksdlkasd lkadsk alskdlk haslkdhalask alsd a
-            </div>
-        </div>
-        <div class="box">
-            <img src="" />
-            <h4> titulli i lajmeve krydskfhdshdksfhkdlsdfds</h4>
-            <div class="date">
-                <p>09-12-2023</p>
-            </div>
-            <div class="desc">
-                description djlfdjf djhfalsd haskd ljaslkjd aasd alsjd asldjlaskhd alsdh ljasjhd alskhddasljd asldd
-                alksdkl ahslkdlk aslkdla ksdlkasd lkadsk alskdlk haslkdhalask alsd a
-            </div>
-        </div>
+
     </main>
     <footer class="footerC">
         <div class="logot">
@@ -138,6 +107,7 @@
             }
         });
     </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
