--- a/HomePage.html
+++ b/HomePage.html
@@ -12,22 +12,12 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="Stilizimi.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <nav>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portofolio</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
             <div class="search">
                 <div class="icon"></div>
                 <div class="input">
@@ -35,7 +25,18 @@
                 </div>
                 <span class="clear" onclick="document.getElementById('mysearch').value = ''"></span>
             </div>
-
+            <div class="menu">
+                <ul>
+                    <li><a href="#">lajme</a></li>
+                    <li><a href="#">Kronikë</a></li>
+                    <li><a href="#">Shëndetësi</a></li>
+                    <li><a href="#">ekonomi</a></li>
+                    <li><a href="#">kulture</a></li>
+                    <li><a href="#">sport</a></li>
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -56,38 +57,27 @@
         </div>
 
     </main>
-    <footer class="footerC">
+    <footer>
+        <div class="FooterC">
         <div class="logot">
-
-            <a href=""><img src="Facebook_Logo_2023.png" alt="facebook" width="60px" height="60px"></a>
-            <a href=""><img src="twitter-3-logo-png-transparent.png" alt="instagram-6338392_1280" width="60px"
-                    height="60px"></a>
-            <a href=""><img src="instagram-6338392_1280.webp" alt="twitter" width="60px" height="60px"></a>
-            <a href=""><img src="purple-twitch-logo-png-18.png" alt="Twitch" width="60px" height="60px"></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <div class="referencat">
-
-            <li class="referenca">
-                <h2><a href="">Home</a></h2>
-            </li>
-            <li class="referenca">
-                <h2><a href="">Tutorials</a></h2>
-            </li>
-            <li class="referenca">
-                <h2><a href="">Services</a></h2>
-            </li>
-            <li class="referenca">
-                <h2><a href="">About Us</a></h2>
-            </li>
-            <li class="referenca">
-                <h2><a href="">Contact Us</a></h2>
-            </li>
-
+            <ul>
+            <li><a href="">home</a></li>
+            <li><a href="">news</a></li>
+            <li><a href="">about us</a></li>
+            <li><a href="">contact us</a></li>
+            <li><a href="">our team</a></li>
+        </ul>
+        </div>
         </div>
         <div class="Copy">
-            <p>Copyright....</p>
+            <p>Copyright ©2023; Designed by <strong>Leutrim & Ylldrit</strong> </p>
         </div>
-
     </footer>
     <script>
         const icon = document.querySelector('.icon');
