--- a/Lajmi1.html
+++ b/Lajmi1.html
@@ -1,82 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim</title>
+    <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim
+    </title>
     <link rel="stylesheet" href="Stilizimi.css">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <main class="NewsPage">
         <div class="title">
-            <h1>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim</h1>
+            <h1>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për
+                keqtrajtim</h1>
         </div>
-        <div>
+        <div class="image">
             <img src="foto1.png" alt="foto">
         </div>
         <div>
-            <h3>Vrasja mizore e Liridona Admeajt, krim ky që tronditi vendin para disa javësh 
+            <h3>Vrasja mizore e Liridona Admeajt, krim ky që tronditi vendin para disa javësh
                 po vazhdon të hetohet, ndërkohë që pistat po zgjerohen dhe akoma nuk është konfirmuar
                 motivi i rastit tragjik. Tre persona ndodhen në paraburgim, teksa i dyshuari i fundit
                 u arrestua sot nga Policia. Naim Murseli – burri i të ndjerës ndodhet në Burgun e Sigurisë
                 së Lartë, ku para disa ditësh e ka vizitua babai i tij.
             </h3>
             <p>
-                Sinjali ka siguruar ekskluzivisht versionin e Murselit, i cili u përballë për herë të parë 
+                Sinjali ka siguruar ekskluzivisht versionin e Murselit, i cili u përballë për herë të parë
                 me babin e tij, i cili pas arrestimit, përmendi hakmarrje.
                 Në një prononcim për Gazetën Sinjali, Shaban Murseli ka deklaruar se gjatë vizitës
-                 qe i ka bërë Murselit, ky i fundit e ka akuzuar Policinë e Kosovës për keqtrajtim.
-                Në mes të tjerash ai tha se Murseli i ka rrëfyer një version krejt tjetër për dallim 
+                qe i ka bërë Murselit, ky i fundit e ka akuzuar Policinë e Kosovës për keqtrajtim.
+                Në mes të tjerash ai tha se Murseli i ka rrëfyer një version krejt tjetër për dallim
                 nga ajo qe ka dalë në media, duke pretenduar se ka edhe “dëshmi të forta”.
             </p>
             <p>
                 <i><strong>
-                    “Qysh më tha Naimi nuk jonë të vërteta këto akuzat që janë bërë, ato portalet 
-                    çka kanë thanë e, asnjo s’jonë të vërteta. Ai e tregon më së miri vet.
-                    Unë i besoj të vërtetës, as s’i besoj atij, as portalet, as s’i besoj vetëm të vërtetës i besoj.
-                    15 minuta para vrasjes tha që u ndalë në market, ka ble vezë, qumësht e bukë për mëngjes.”
-                </strong></i>
+                        “Qysh më tha Naimi nuk jonë të vërteta këto akuzat që janë bërë, ato portalet
+                        çka kanë thanë e, asnjo s’jonë të vërteta. Ai e tregon më së miri vet.
+                        Unë i besoj të vërtetës, as s’i besoj atij, as portalet, as s’i besoj vetëm të vërtetës i
+                        besoj.
+                        15 minuta para vrasjes tha që u ndalë në market, ka ble vezë, qumësht e bukë për mëngjes.”
+                    </strong></i>
                 -tha ai.
             </p>
-            <p> 
-                Pas takimit me Naimin që po dyshohet se e porositi vrasjen e gruas së tij, Shaban Murseli komentoi edhe
-                deklaratën e tij për hakmarrje.Para disa ditësh ai tha se 
+            <p>
+                Pas takimit me Naimin që po dyshohet se e porositi vrasjen e gruas së tij, Shaban Murseli komentoi
+                edhe
+                deklaratën e tij për hakmarrje.Para disa ditësh ai tha se
                 <i><strong>“me pasë ditë unë që e ka bo djali jem, unë isha hakmarrë vetë unë me
-                 djalë tem atë ditë – ai s’ish sot gjallë”</strong></i>
-                  – gjë për të cilën tha se
+                        djalë tem atë ditë – ai s’ish sot gjallë”</strong></i>
+                – gjë për të cilën tha se
                 do ta bënte nëse
                 <i><strong> “100% vërtetohet që e ka bërë”</strong></i>.
             </p>
-            <p>Në vazhdën e zhvillimit të hetimeve, Policia e Kosovës ka arrestuar 
+            <p>Në vazhdën e zhvillimit të hetimeve, Policia e Kosovës ka arrestuar
                 edhe të dyshuarin e katërt, Tomë Dodaj, i cili dyshohet se ka furnizuar
-                 me armën e krimit dy të dyshuarit tjerë, Naim Murselin dhe Granit Plavën.
+                me armën e krimit dy të dyshuarit tjerë, Naim Murselin dhe Granit Plavën.
             </p>
-            <p>
-                Naim Murseli ngarkohet me veprën penale ‘Vrasje e rëndë në bashkëkryerje’.
-            </p>
-            <p>
-                Granit Plava ngarkohet me veprat penale ‘Vrasje e rëndë’ dhe ‘Mbajtje në pronësi,
-                 kontroll ose posedim të paautorizuar të armës’.
-            </p>
-            <p>
-                Kushtrim Kokalla ngarkohet me veprën penale ‘Marrëveshje për të kryer 
-                veprën penale <strong>‘Vrasje e rëndë’</strong>’.
-            </p>
+            <ul>
+                <li>Naim Murseli ngarkohet me veprën penale ‘Vrasje e rëndë në bashkëkryerje’.
+                </li>
+                <li>
+                    Granit Plava ngarkohet me veprat penale ‘Vrasje e rëndë’ dhe ‘Mbajtje në pronësi,
+                    kontroll ose posedim të paautorizuar të armës’.
+                </li>
+                <li>
+                    Kushtrim Kokalla ngarkohet me veprën penale ‘Marrëveshje për të kryer
+                    veprën penale <strong>‘Vrasje e rëndë’</strong>’.
+                </li>
+            </ul>
+            <br>
+            <br>
             <br>
             <p>
                 <strong>
-                    Shënim: Personat e apostrofuar në këtë artikull prezumohen të pafajshëm 
+                    Shënim: Personat e apostrofuar në këtë artikull prezumohen të pafajshëm
                     derisa fajësia e tyre të mos provohet me vendim të formës së prerë nga gjykata.
                 </strong>
             </p>
-    
+
         </div>
 
+
     </main>
+    <footer>
+        <div class="FooterC">
+        <div class="logot">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+        <div class="referencat">
+            <ul>
+            <li><a href="">home</a></li>
+            <li><a href="">news</a></li>
+            <li><a href="">about us</a></li>
+            <li><a href="">contact us</a></li>
+            <li><a href="">our team</a></li>
+        </ul>
+        </div>
+        </div>
+        <div class="Copy">
+            <p>Copyright ©2023; Designed by <strong>Leutrim & Ylldrit</strong> </p>
+        </div>
+    </footer>
 </body>
+
 </html>
