--- a/HomePage.html
+++ b/HomePage.html
@@ -55,7 +55,95 @@
                 vizitua babai i tij, raporton Gazeta Sinjali.
             </div>
         </div>
-
+        <div class="box" onclick="openLink('Lajmi2.html')">
+            <img src="foto2.png" />
+            <h4>A e dini se stina e dimrit dëmton baterinë e celularit tuaj? Arsyet do t’iu befasojnë</h4>
+            <div class="date">
+                <p>07-12-2023</p>
+            </div>
+            <div class="desc">
+                Gjithçka që bëjnë telefonat tanë, është me të vërtetë e mrekullueshme. 
+                Por ka një gjë që nuk e bëjnë dot mirë: t’i rezistojnë motit të ftohtë.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi3.html')">
+            <img src="foto3.png" />
+            <h4>Zbulohet plani anti-Sunak, Boris Johnson rikthehet si kryeministër në koalicion me “babain” e Brexit</h4>
+            <div class="date">
+                <p>07-12-2023</p>
+            </div>
+            <div class="desc">
+                Mbi pjatat me ravioli dhe mëlçi viçi, të shoqëruara me verë të kuqe nga Italia e jugut, armiqtë politikë të 
+                Rishi Sunak kanë komplotuar lëvizjen e tyre të radhës kundër qeverisë.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi4.html')">
+            <img src="foto4.png" />
+            <h4>BE njofton për 125 milionë euro ndihmë humanitare për palestinezët</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                BE njofton për 125 milionë euro ndihmë humanitare për palestinezët.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi5.html')">
+            <img src="foto5.png" />
+            <h4>Kompletohen 16 ekipet e mbetura në garë për Kupën e Kosovës, 
+                caktohet edhe data e shortit</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                Dinamo ka kompletuar numrin e skuadrave që do të jenë pjesëmarrëse në 1/8 e
+                 finales së Kupës së Kosovës në futboll.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi6.html')">
+            <img src="foto6.png" />
+            <h4>Dyshohet se keqpërdorën ujin e ujësjellësit, fabrika ‘Spirit of Drini’ procedohet në Prokurori</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                Fabrika për prodhimin e ujit, ‘Spirit of Drini’, është proceduar në Prokurorinë Themelore në Pejë, pasi u
+                 denoncua publikisht se ka keqpërdorur ujin ilegalisht, raporton Gazeta Sinjali.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi7.html')">
+            <img src="foto7.png" />
+            <h4>Facebook dhe Messenger do të kodojnë mesazhet automatikisht</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                Të gjitha bisedat në Facebook dhe Messenger do të kodohen automatikisht,
+                 ka njoftuar kompania mëmë Meta.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi8.html')">
+            <img src="foto8.png" />
+            <h4>Pamje dramatike/ Momenti i ekzekutimit të 41-vjeçarit në Fier</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                Ky është momenti i ekzekutimit të Erjon Javorit mesditën e së enjtes në lagjen
+                     “16 Prilli” në Fier, disa metra larg banesës së tij.
+            </div>
+        </div>
+        <div class="box" onclick="openLink('Lajmi9.html')">
+            <img src="foto9.png" />
+            <h4>Hill: Serbët në Veri duhet të kenë perspektivë për të ardhmen,
+                 Asociacioni është hap i qartë në këtë drejtim</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                Ambasadori amerikan në Serbi, Christopher Hill ka folur për normalizimin e marrëdhënieve 
+                mes Kosovës dhe Serbisë, e që si një kusht kyç konsiderohet njohja de facto e Kosovës.
+            </div>
+        </div>
     </main>
     <footer>
         <div class="FooterC">
