HomePage, News Section, Log In, Register Finish

--- a/Lajmi10.html
+++ b/Lajmi10.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pamje dramatike/ Momenti i ekzekutimit të 41-vjeçarit në Fier
+    <title>I tundur nga ofertat tjera”, Sylviniho flet për kontratën me Shqipërinë: Ndihem shumë mirë këtu
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
 
@@ -17,35 +17,30 @@
 <body>
     <main class="NewsPage">
         <div class="title">
-            <h1>Pamje dramatike/ Momenti i ekzekutimit të 41-vjeçarit në Fier</h1>
+            <h1>“I tundur nga ofertat tjera”, Sylviniho flet për kontratën me Shqipërinë: Ndihem shumë mirë këtu
+            </h1>
         </div>
         <div class="image">
-            <img src="foto8.png" alt="foto">
+            <img src="foto10.png" alt="foto">
         </div>
         <div>
-            <h3>Ky është momenti i ekzekutimit të Erjon Javorit mesditën e së enjtes në lagjen 
-                “16 Prilli” në Fier, disa metra larg banesës së tij.
+            <h3>Trajneri i kombëtares së Shqipërisë, Sylvinho, ka folur mbi kontratën që ai ka me kuqezinjtë, duke thënë se s’ka
+                 firmosur ende asgjë por nuk ndihet i shqetësuar.
             </h3>
             <p>
-                Në makinën “Mercedez Ben” lëvizte autori i dyshuar Agim Gashi, i cili
-                 afrohet automjetit me të cilin po lëvizte Erjon Javori. 41-vjeçari hap xhamin e makinës dhe 
-                pikërisht në këtë moment në ecje e sipër është kryer edhe ekzekutimi me armë zjarri.
+                Sylvinho tha se aktualisht ka kontratë me Shqipërinë deri në përfundim të Evropianit dhe së bashku me
+                 stafin këto ditë janë marrë kryesisht me shortin.
+            <p>
+                “Ne duhet të shfrytëzojmë këto 6 muaj për të rikuperuar forcat duke nisur nga janari për
+                 të punuar fort për të bërë diçka më shumë, 
+                kështu që për gjërat e tjera nuk jam i shqetësuar për asgjë”, tha Sylvinho në një intervistë për “News24”.
             </p>
             <p>
-                Pas kryerjes së këtij atentati, Gashi u largua me shpejtësi dhe tashmë është shpallur në kërkim nga policia.
+                Ai më tej është shprehur i gatshëm për të qëndruar më gjatë në Shqipërinë, pasi tha se ndihet mirë me kombëtaren.
             </p>
             <p>
-                Identifikimi i tij nga policia u bë përmes kamerave të sigurisë në zonë, pasi lagjia e njohur, si Backallinjve 
-                ku ndodhi vrasja e 41-vjeçarit është e mirëmonitoruar.
-            </p>
-            <p>
-                Policia dhe Prokuroria e Fierit dyshon se ngjarja mund të ketë ndodhur për motive të dobëta.
-            </p>
-            <p>Burime pranë grupit hetimor pohojnë se bëhet fjalë për një konflikt të krijuar pas një krushqie të prishur. 
-                Por pavarësisht këtyre dyshimeve policia vijon hetimet për sqarimin e plotë të rrethanave të ngjarjes.
-            </p>
-            <p onclick="openLink('https://www.youtube.com/watch?v=sd_Au54MoLE')" style="cursor: pointer; color: blue;">
-                Kliko ketu per te pare videon.
+                “Jemi duke bërë një punë të mirë, e dimë që kemi edhe besimin e futbollistëve, një raport të mirë me federatën, 
+                me gjithë njerëzit, jetojmë këtu në Tiranë, kështu që nuk kemi asnjë problem”, tha ai.
             </p>
         </div>
     </main>
