--- a/Lajmi11.html
+++ b/Lajmi11.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zbulohet plani anti-Sunak, Boris Johnson rikthehet si 
-        kryeministër në koalicion me “babain” e Brexit
+    <title>Alarmon Shakohoxha: Shqipëria ende s’e ka vazhduar kontratën me Sylvinhon, ai është i tundur nga ofertat tjera
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
 
@@ -18,30 +17,31 @@
 <body>
     <main class="NewsPage">
         <div class="title">
-            <h1>Zbulohet plani anti-Sunak, Boris Johnson rikthehet si 
-                kryeministër në koalicion me “babain” e Brexit</h1>
+            <h1>
+                Alarmon Shakohoxha: Shqipëria ende s’e ka vazhduar kontratën me Sylvinhon, ai është i tundur nga ofertat tjera
+            </h1>
         </div>
         <div class="image">
-            <img src="foto3.png" alt="foto">
+            <img src="foto11.png" alt="foto">
         </div>
         <div>
-            <h3>Mbi pjatat me ravioli dhe mëlçi viçi, të shoqëruara me verë të kuqe nga Italia e jugut, armiqtë 
-                politikë të Rishi Sunak kanë komplotuar lëvizjen e tyre të radhës kundër qeverisë.
+            <h3>Gazetari sportiv, Dritan Shakohoxha, ka alarmuar në “Favorit” me 
+                lajmin e fundit rreth kontratës së trajnerit Sylvinho.
             </h3>
             <p>
-                Te restoranti Giovanni’s i aristokratit siçilian Konti Pino Ragona në Covent 
-                Garden të Londrës sipas DailyMail nga Konservatorët që qëndrojnë kundër Sunak është thurur 
-                një plan për rrëzimin e kryeministrit para zgjedhjeve parlamentare.
-            </p>
+                Komentatori i njohur shqiptar zbuloi se trajneri brazilian nuk e ka vazhduar ende 
+                kontratën dhe se ende nuk ka vendosur nëse do ta bëjë një gjë të tillë apo jo pasi
+                 atë po e tundojnë ofertat tjera pas 
+                suksesit që e pati me Kombëtaren shqiptare, të cilën e kualifikoi në Euro 2024.
             <p>
-                Letra e saj brutale personale e ndarjes u pasua nga dorëheqja e Ministrit të Emigracionit Robert Jenrick 
-                dhe tashmë brenda partisë ka një front që punon qartë e pastër kundër Sunak.
+                Shakohoxha insiston se ky është problemi dhe brenga më e madhe që duhet 
+                ta kenë shqiptarët, pra, që do të mundë ta humbasim trajnerin Sylvinho,
+                 e jo pse kemi rënë në grup me Spanjën, Italinë dhe Kroacinë.
             </p>
-            <p>
-                Mes këtyre raportimeve, një tjetër lajm i bujshëm është ai i një plani për të rikthyer Boris Johnson si kryeministër,
-                 madje duke marrë në konsideratë edhe një binjakëzim lidershipi me “babain” e Brexit, Nigel Farage.
+            <p onclick="openLink('https://www.facebook.com/T7plus/videos/681013710761578/')" style="cursor: pointer; color: blue;">
+                Video
             </p>
-
+        </div>
     </main>
     <footer>
         <div class="FooterC">
@@ -65,6 +65,7 @@
             <p>Copyright ©2023; Designed by <strong>Leutrim & Ylldrit</strong> </p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
