--- a/Lajmi2.html
+++ b/Lajmi2.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim
+    <title>A e dini se stina e dimrit dëmton 
+        baterinë e celularit tuaj? Arsyet do t’iu befasojnë
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
 
