--- a/Lajmi6.html
+++ b/Lajmi6.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim
+    <title>Dyshohet se keqpërdorën ujin e ujësjellësit, fabrika ‘Spirit of Drini’ procedohet në Prokurori
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
 
