--- a/Lajmi5.html
+++ b/Lajmi5.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim
+    <title>Kompletohen 16 ekipet e mbetura në garë për Kupën e Kosovës, 
+        caktohet edhe data e shortit
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
 
