--- a/Lajmi9.html
+++ b/Lajmi9.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim
+    <title>Hill: Serbët në Veri duhet të kenë perspektivë për të ardhmen, 
+        Asociacioni është hap i qartë në këtë drejtim
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
 
