--- a/ekonomi.html
+++ b/ekonomi.html
@@ -23,7 +23,7 @@
                 <li><a href="#">lajme</a></li>
                 <li><a href="#">kronikë</a></li>
                 <li><a href="#">shëndetësi</a></li>
-                <li class="box" onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
+                <li class="box" onclick="openLink('ekonomi.html')" style="cursor: pointer; color: blue;"><a href="#">ekonomi</a></li>
                 <li><a href="#">kulture</a></li>
                 <li><a href="#">sport</a></li>
                 <li onclick="openLink('LogInForm.html')"><a href="#">Sign In</a></li>
@@ -34,7 +34,7 @@
                     <li class="hideOnMobile" ><a href="#">lajme</a></li>
                     <li class="hideOnMobile"><a href="#">kronikë</a></li>
                     <li class="hideOnMobile"><a href="#">shëndetësi</a></li>
-                    <li onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
+                    <li onclick="openLink('ekonomi.html')" style="cursor: pointer; color: blue;"><a href="#">ekonomi</a></li>
                     <li class="hideOnMobile"><a href="#">kulture</a></li>
                     <li class="hideOnMobile"><a href="#">sport</a></li>
                     <li class="hideOnMobile" onclick="openLink('LogInForm.html')"><a href="#">Sign In</a></li>
@@ -466,4 +466,4 @@
     </footer>
 </body>
 <script src="script.js" ></script>
-</html>
+</html> 
