footers in all news done

--- a/HomePage.html
+++ b/HomePage.html
@@ -23,7 +23,7 @@
                 <li><a href="#">lajme</a></li>
                 <li><a href="#">kronikë</a></li>
                 <li><a href="#">shëndetësi</a></li>
-                <li class="box" onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
+                <li onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
                 <li><a href="#">kulture</a></li>
                 <li><a href="#">sport</a></li>
                 <li onclick="openLink('LogInForm.html')"><a href="#">Sign In</a></li>
@@ -453,7 +453,7 @@
             <ul>
             <li><a href="#">home</a></li>
             <li><a href="#">news</a></li>
-            <li onclick="openLink('about us.html')"><a href="#">about us</a></li>
+            <li><a href="#">about us</a></li>
             <li><a href="#">contact us</a></li>
             <li><a href="#">our team</a></li>
         </ul>
