--- a/Lajmi1.html
+++ b/Lajmi1.html
@@ -7,6 +7,7 @@
     <title>Ekskluzive: Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim
     </title>
     <link rel="stylesheet" href="Stilizimi.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -98,11 +99,11 @@
         </div>
         <div class="referencat">
             <ul>
-            <li><a href="">home</a></li>
-            <li><a href="">news</a></li>
-            <li><a href="">about us</a></li>
-            <li><a href="">contact us</a></li>
-            <li><a href="">our team</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">news</a></li>
+            <li><a href="#">about us</a></li>
+            <li><a href="#">contact us</a></li>
+            <li><a href="#">our team</a></li>
         </ul>
         </div>
         </div>
